--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -46,25 +46,26 @@
   position: relative;
 }
 
-.app-tray.app-open.blured:before {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    content:"";                 
-    opacity: 0.3;
-  display: inline-block;
-  height: 100%; 
-  vertical-align: middle;
-  margin-right: -.25em; /* Adjusts for spacing */
-     background-color: white;
+.app-tray.app-open.blured:after {
+  content: "";
+  position: relative;
+  left: 0;
+  right: 0;
+  background-color: white;
+  opacity: 0.7;
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
 }
 
-.app-tray.app-open.blured.blured-dark:before{
+.app-tray.app-open.blured.blured-dark:before {
   background-color: black;
-  opacity: 0.7;
+  opacity: 0.3;
 }
 
 .app-tray:not(.app-open) > .app > .app-title {
@@ -132,13 +133,15 @@
 
 .app-tray.app-open[class*="app-open-"] {
   height: 100%;
-  position:relative;
-  text-align: center;
 }
 
 .app-tray.app-open[class*="app-open-"] > .app.active {
-  display: inline-block;
-  vertical-align: middle;
+  margin-right: auto;
+  margin-left: auto;
+  float: none;
+  top: -50%;
+  transform: translateY(-50%);
+  position: relative;
 }
 
 .app-tray.app-open[class*="app-open-"].blured.app-shadowed > .app.active {
@@ -147,6 +150,14 @@
 
 .app-tray.app-open[class*="app-open-"].blured.bluerd-dark.app-shadowed > .app.active {
   box-shadow: #ddd 0 3px 15px 0;
+}
+
+.app-tray.app-open.blured:not([class*="app-open-"]) > .app.active {
+  top: -100%;
+}
+
+.app-tray.app-open:not(.blured)[class*="app-open-"] > .app.active {
+  top: 50%;
 }
 
 .app-tray.app-open.app-open-50 > .app.active {
