--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -46,7 +46,7 @@
   position: relative;
 }
 
-.app-tray.app-open.blured:after {
+.app-tray.app-open.blured:before {
   content: "";
   position: relative;
   left: 0;
@@ -133,15 +133,12 @@
 
 .app-tray.app-open[class*="app-open-"] {
   height: 100%;
+  display: flex;
 }
 
 .app-tray.app-open[class*="app-open-"] > .app.active {
-  margin-right: auto;
-  margin-left: auto;
+  margin: auto;
   float: none;
-  top: -50%;
-  transform: translateY(-50%);
-  position: relative;
 }
 
 .app-tray.app-open[class*="app-open-"].blured.app-shadowed > .app.active {
@@ -150,14 +147,6 @@
 
 .app-tray.app-open[class*="app-open-"].blured.bluerd-dark.app-shadowed > .app.active {
   box-shadow: #ddd 0 3px 15px 0;
-}
-
-.app-tray.app-open.blured:not([class*="app-open-"]) > .app.active {
-  top: -100%;
-}
-
-.app-tray.app-open:not(.blured)[class*="app-open-"] > .app.active {
-  top: 50%;
 }
 
 .app-tray.app-open.app-open-50 > .app.active {
