--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -4819,7 +4819,7 @@
 }
 
 .app-tray:not(.app-open) {
-  padding: 10px;
+  padding: 10 -5px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active) > .app-title {
