--- a/css/AppFlow.css
+++ b/css/AppFlow.css
@@ -4342,7 +4342,7 @@
 
 .app-tray.spacing-1:not(.app-open) {
   padding: 5px;
-  bottom-padding: 8px;
+  padding-bottom: 8px;
   font-size: 10px;
 }
 
@@ -4431,7 +4431,7 @@
 
 .app-tray.spacing-2:not(.app-open) {
   padding: 10px;
-  bottom-padding: 16px;
+  padding-bottom: 16px;
   font-size: 11px;
 }
 
@@ -4520,7 +4520,7 @@
 
 .app-tray.spacing-3:not(.app-open) {
   padding: 15px;
-  bottom-padding: 24px;
+  padding-bottom: 24px;
   font-size: 12px;
 }
 
@@ -4609,7 +4609,7 @@
 
 .app-tray.spacing-4:not(.app-open) {
   padding: 20px;
-  bottom-padding: 32px;
+  padding-bottom: 32px;
   font-size: 13px;
 }
 
@@ -4698,7 +4698,7 @@
 
 .app-tray.spacing-5:not(.app-open) {
   padding: 25px;
-  bottom-padding: 40px;
+  padding-bottom: 40px;
   font-size: 14px;
 }
 
@@ -4863,7 +4863,7 @@
 
 .app-tray:not(.app-open) {
   padding: 5px;
-  bottom-padding: 8px;
+  padding-bottom: 8px;
 }
 
 .app-tray:not(.app-open) > .app:not(.active) > .app-title {
